// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It should render ExpensesSummary for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3 expenses
     totalling 
    $1,200.00
  </h1>
</div>
`;

exports[`It should render ExpensesSummary for one expense 1`] = `
<div>
  <h1>
    Viewing 
    1 expense
     totalling 
    $120.00
  </h1>
</div>
`;
